# a-stock-mcp

./: README.md  mcp_server.py  pyproject.toml
src/: ashare_data_source.py
src/tools/: market_data.py  realtime_market.py
src/use_cases/: market_data.py  realtime_market.py
